fix image on iphone

--- a/src/components/hero/hero.scss
+++ b/src/components/hero/hero.scss
@@ -3,7 +3,6 @@
     height: calc(100vh - 100px);
     position: relative;
     overflow: hidden;
-    width: 100vw;
 
     .contentContainer {
         display: flex;
@@ -65,13 +64,11 @@
         bottom: 0;
         z-index: -1;
         max-width: 100%;
-        object-fit: cover;
-        object-position: center;
         @include mobile {
             height: auto;
-            // display: none;
-            max-width: 100vw;
-            height: auto;
+            max-width: 481px;
+            float: none;
+            display: block;
         }
         @include tablet {
             height: auto;
@@ -82,8 +79,6 @@
             width: auto;
             height: 100%;
             max-width: 100%;
-            object-fit: cover;
-            object-position: center;
         }
     }
 
